--- a/jsconfig.json
+++ b/jsconfig.json
@@ -11,7 +11,8 @@
       "@routes/*": ["src/routes/*"],
       "@redux/*": ["src/redux/*"],
       "@services/*": ["src/services/*"],
-      "@api/*": ["src/api/*"]
+      "@api/*": ["src/api/*"],
+      "@lib/*": ["src/lib/*"]
     }
   }
 }
