Call api Show restaurant at home page

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 VITE_API_BASE_URL=https://angiday-production-c5c0.up.railway.app
+# VITE_FIREBASE_API_KEY=AIzaSyB0emlR3eFZjzPy7lmnUxFRwwwnHGkX-iM
+# VITE_FIREBASE_AUTH_DOMAIN=exe-project-b68fe.firebaseapp.com
+# VITE_FIREBASE_PROJECT_ID=exe-project-b68fe
+# VITE_FIREBASE_MESSAGING_SENDER_ID=1079503376991
+# VITE_FIREBASE_APP_ID=1:1079503376991:web:6eb12fcb39b4bb18ba01ea
