--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.12.2",
+    "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.542.0",
     "react": "^19.1.0",
