--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VITE_API_BASE_URL=https://angiday-production-c5c0.up.railway.app/api
+VITE_GOOGLE_CLIENT_ID=691877893987-6reciq92hak2439m1mchfona8gt1f6cn.apps.googleusercontent.com
 # VITE_FIREBASE_API_KEY=AIzaSyB0emlR3eFZjzPy7lmnUxFRwwwnHGkX-iM
 # VITE_FIREBASE_AUTH_DOMAIN=exe-project-b68fe.firebaseapp.com
 # VITE_FIREBASE_PROJECT_ID=exe-project-b68fe
